fixes some warning, and at some string to help fix some warning

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">SmartNap</string>
+    <string name="create_new_question">Create New Question</string>
+    <string name="edit_myquestion">Edit MyQuestion</string>
+    <string name="myquestion">MyQuestion</string>
+    <string name="save">Save</string>
+    <string name="answer">Answer:</string>
+    <string name="classid">Class</string>
+    <string name="clear">Clear</string>
+    <string name="falseanswer">False</string>
+    <string name="multiple_choice">Multiple Choice</string>
+    <string name="new_question">New Question</string>
+    <string name="question">Question?</string>
+    <string name="true_false">True False</string>
+    <string name="trueanswer">True</string>
+    <string name="option1">option1</string>
+    <string name="option2">option2</string>
+    <string name="option3">option3</string>
+    <string name="option4">option4</string>
 </resources>
