change same string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="save">Save</string>
     <string name="answer">Answer:</string>
     <string name="clear">Clear</string>
-    <string name="new_question">New Question</string>
+    <string name="new_question">Question Submission</string>
     <string name="question">Question?</string>
     <string name="classid">Class</string>
     <string name="flashcard">Flashcard</string>
