Fix up activity_alarm.xml Working on adding a button link to the flash card page from the edit alarm activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">SmartNap</string>
+    <string name="addFlashCard">Add Flash Card</string>
+    <string name="setNewAlarm">Set Alarm</string>
+    <string name="newAlarmHeader">Edit Alarm</string>
     <string name="create_new_question">Create New Question</string>
     <string name="edit_myquestion">Edit MyQuestion</string>
     <string name="QuestionSet">MyQuestionSet</string>
