make a sample of flashcard appear on the alarm dialog screen + add function to change visibility.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="flashcard_answer">flashcard answer</string>
     <string name="title_activity_alarm_dialog">AlarmDialog</string>
     <string name="empty" />
+    <string name="this_will_be_the_question">This Will be the Question</string>
+    <string name="silence_alarm">Silence Alarm</string>
+    <string name="this_will_be_the_answer">This Will be the Answer</string>
 </resources>
