--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,5 @@
     <string name="this_will_be_the_question">This Will be the Question</string>
     <string name="silence_alarm">Silence Alarm</string>
     <string name="this_will_be_the_answer">This Will be the Answer</string>
-    <string name="textview">TextView</string>
-    <string name="textview1">TextView1</string>
+    <string name="dialog_AlarmName">Alarm Name</string>
 </resources>
