Convenience changes to alarm settings - When user first pushes on the Alarm Name edit text, it empties out for them to type a custom name, but then sets a boolean value to indicate they've already changed the name to something custom. - Further enhancements could be made here

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="flashcard">Flashcard</string>
     <string name="flashcard_answer">flashcard answer</string>
     <string name="title_activity_alarm_dialog">AlarmDialog</string>
-    <string name="empty" />
+    <string name="empty"></string>
     <string name="DEFAULT_flashCardQuestionText">This Will be the Question</string>
     <string name="silence_alarm">Silence Alarm</string>
     <string name="DEFAULT_flashCardAnswerText">This Will be the Answer</string>
