--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="DEFAULT_flashCardAnswerText">This Will be the Answer</string>
     <string name="dialog_AlarmName">Alarm Name</string>
     <string name="next_question">Next Question</string>
+    <string name="textview">TextView</string>
 </resources>
