More changes for handling alarm edits - Should be mostly functional now in terms of handling whether to create a new database entry for a new alarm or modify an existing database entry for an existing alarm - Still needs code wrote to populate the ArrayList of integers with users chosen flash card choices - Still considered WIP because its not fully tested yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">SmartNap</string>
     <string name="label_setNewAlarm">Set Alarm</string>
     <string name="label_addFlashCard">Add Flash Card</string>
-    <string name="editAlarmHeader">Edit Alarm</string>
+    <string name="label_deleteAlarm">Delete Alarm</string>
+    <string name="header_editAlarm">Edit Alarm</string>
+    <string name="header_createAlarm">Create Alarm</string>
     <string name="inputAlarmName">Alarm name</string>
     <string name="create_new_question">Create New Question</string>
     <string name="edit_myquestion">Edit MyQuestion</string>
