Further changes for the linker class to work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SmartNap</string>
-    <string name="extraKey_alarmID">extraKey_alarmID</string>
+    <string name="extraKey_alarm">extraKey_alarm</string>
     <string name="extraKey_cards">extraKey_cards</string>
     <string name="key_alarmName">alarmName</string>
     <string name="label_setNewAlarm">Save</string>
