fix the two toast message pop-up problem and add a new instrument test for saving flashcard.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="questions">Questions</string>
     <string name="name">Name</string>
     <string name="delete">Delete</string>
+    <string name="successsave">FlashCard has been made!</string>
+    <string name="failsave">ERROR: Can\'t save FlashCard!</string>
 </resources>
